# era-routing

./: .clang_complete  .editorconfig  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  compile.sh  development.sublime-project  flow-manager.cc  flow-manager.h  graph-manager.cc  graph-manager.h  lp-solver.cc  lp-solver.sublime-project  make.sh  sample.lgf  xml-utilities.cc  xml-utilities.h
GeneticAlgorithm/: GeneticAlgorithm.pyproj  ga.py  run_tests.sh
GeneticAlgorithm/classes/: definitions.py  flow.py  ga_operators.py  ga_results.py  link.py  logger.py  network.py  objectives.py  parameters.py  path.py  timings.py  xml_handler.py
GeneticAlgorithm/misc/: ns3_converter.py
GeneticAlgorithm/modules/: algorithms.py  flow.py  ga_operators.py  ga_results.py  ga_statistics.py  logger.py  network.py  objectives.py  parameters.py  timings.py
GeneticAlgorithm/tests/: butterfly_ksp.xml  excess_removal.py  objectives.py  test_metric_bounds.py  test_metric_calculation.py  test_objectives.py
Jobscripts/: ns3ParallelCommands.txt  ns3SubmitCommands.sh
Jobscripts/Moea/: parallelCommands.txt  parallelCommands_1.txt  parallelCommands_FULL.txt  submitCommands.sh
Jobscripts/Moea/High/Moea1/: moea1_High_100_Ksp_Ca_1.pbs  moea1_High_100_Ksp_Ca_2.pbs  moea1_High_100_Ksp_Ca_3.pbs  moea1_High_100_Ksp_Ca_4.pbs  moea1_High_100_Ksp_Ca_5.pbs  moea1_High_100_Red_Ca_1.pbs  moea1_High_100_Red_Ca_2.pbs  moea1_High_100_Red_Ca_3.pbs  moea1_High_100_Red_Ca_4.pbs  moea1_High_100_Red_Ca_5.pbs  moea1_High_150_Ksp_Ca_1.pbs  moea1_High_150_Ksp_Ca_2.pbs  moea1_High_150_Ksp_Ca_3.pbs  moea1_High_150_Ksp_Ca_4.pbs  moea1_High_150_Ksp_Ca_5.pbs  moea1_High_150_Red_Ca_1.pbs  moea1_High_150_Red_Ca_2.pbs  moea1_High_150_Red_Ca_3.pbs  moea1_High_150_Red_Ca_4.pbs  moea1_High_150_Red_Ca_5.pbs  moea1_High_50_Ksp_Ca_1.pbs  moea1_High_50_Ksp_Ca_2.pbs  moea1_High_50_Ksp_Ca_3.pbs  moea1_High_50_Ksp_Ca_4.pbs  moea1_High_50_Ksp_Ca_5.pbs  moea1_High_50_Red_Ca_1.pbs  moea1_High_50_Red_Ca_2.pbs  moea1_High_50_Red_Ca_3.pbs  moea1_High_50_Red_Ca_4.pbs  moea1_High_50_Red_Ca_5.pbs
Jobscripts/Moea/High/Moea2/: moea2_High_100_Ksp_Ca_1.pbs  moea2_High_100_Ksp_Ca_2.pbs  moea2_High_100_Ksp_Ca_3.pbs  moea2_High_100_Ksp_Ca_4.pbs  (+26 more)
Jobscripts/Moea_Hybrid/: moea2Hybrid_High_150_Ksp_Ca_3.pbs
Jobscripts/Moea_NotConsideringAcks/: moea2_High_150_Ksp_Nca_5.pbs
Jobscripts/Ns3/: Hybrid_High_150_Ksp_Mptcp_5PercentMaxNetFlow_Ca_3.pbs  Hybrid_High_150_Ksp_Mptcp_5PercentMaxNetFlow_Ca_3.txt  Moea1_High_150_Red_Ppfs_MaxNetFlowNoSplits_Ca_3.pbs  Moea1_High_150_Red_Ppfs_MaxNetFlowNoSplits_Ca_3.txt  Moea2_High_150_Ksp_Mptcp_MaxNetFlow_Ca_3.pbs  Moea2_High_150_Ksp_Mptcp_MaxNetFlow_Ca_3.txt  Moea2_High_150_Ksp_Mptcp_MaxNetFlow_Ca_5.pbs  Moea2_High_150_Ksp_Mptcp_MaxNetFlow_Ca_5.txt  Moea2_High_150_Ksp_Mptcp_MaxNetFlow_Nca_5.pbs  Moea2_High_150_Ksp_Mptcp_MaxNetFlow_Nca_5.txt  Moea2_High_150_Ksp_Ppfs_MaxNetFlow_Ca_5.pbs  Moea2_High_150_Ksp_Ppfs_MaxNetFlow_Ca_5.txt  Moea2_High_150_Ksp_Ppfs_MaxNetFlow_Nca_5.pbs  Moea2_High_150_Ksp_Ppfs_MaxNetFlow_Nca_5.txt  Ospf_High_150_Ospf_Ppfs_None_Ca_3.pbs  Ospf_High_150_Ospf_Ppfs_None_Ca_3.txt  PcLp_High_150_Ksp_Mptcp_None_Ca_3.pbs  PcLp_High_150_Ksp_Mptcp_None_Ca_3.txt  PcLp_High_150_Ksp_Mptcp_None_Ca_5.pbs  PcLp_High_150_Ksp_Mptcp_None_Ca_5.txt  PcLp_High_150_Ksp_Mptcp_None_Nca_5.pbs  PcLp_High_150_Ksp_Mptcp_None_Nca_5.txt  PcLp_High_150_Ksp_Ppfs_None_Ca_5.pbs  PcLp_High_150_Ksp_Ppfs_None_Ca_5.txt  PcLp_High_150_Ksp_Ppfs_None_Nca_5.pbs  PcLp_High_150_Ksp_Ppfs_None_Nca_5.txt  PcLp_High_150_Red_Mptcp_None_Ca_5.pbs  PcLp_High_150_Red_Mptcp_None_Ca_5.txt  PcLp_High_150_Red_Ppfs_None_Ca_3.pbs  PcLp_High_150_Red_Ppfs_None_Ca_3.txt
KShortestPath/: CMakeLists.txt  ksp.sublime-project
KShortestPath/src/: boost-graph.cpp  boost-graph.hpp  definitions.hpp  flow.cpp  flow.hpp  lemon-graph.cpp  lemon-graph.hpp  main.cpp  path.cpp  path.hpp  xml-handler.cpp  xml-handler.hpp
KShortestPath/tests/: test.py
KShortestPath/tests/graphs/: .gitignore  circleThreePaths.lgf
LpSolver/: .gitignore  CMakeLists.txt
LpSolver/src/: flow-manager.cc  flow-manager.h  graph-manager.cc  graph-manager.h  lp-solver.cc  xml-utilities.cc
NetworkTopologyLgfToXml/: CMakeLists.txt
NetworkTopologyLgfToXml/src/: definitions.hpp  lemon-graph.cc  lemon-graph.hpp  main.cc
PathConstrainedMCFPSolver/: .gitignore  CMakeLists.txt  pc_mcfp.sublime-project
PathConstrainedMCFPSolver/src/: definitions.h  flow.cc  flow.h  flow_details.cc  flow_details.h  flows.cc  flows.h  ksp_parser.cc  ksp_parser.h  link.cc  link.h  links.cc  links.h  lp_solver.cc  lp_solver.h  main.cc  path.cc  path.h  xml_handler.cc  xml_handler.h
PathSelector/: .gitignore  CMakeLists.txt  build.sh
PathSelector/src/: boost-graph.cpp  boost-graph.hpp  definitions.hpp  flow.cpp  flow.hpp  lemon-graph.cpp  lemon-graph.hpp  main.cpp  oppositeLink.cpp  oppositeLink.hpp  xml-handler.cpp  xml-handler.hpp
PathSelector/tests/: test.py
PathSelector/tests/graphs/: butterfly.lgf  circle.lgf  circleThreePaths.lgf  diamond.lgf  diamondParallel.lgf  line.lgf  lineParallel.lgf  twoDiamond.lgf
PathSelector/tests/paths/: .gitignore
PcLp/: CMakeLists.txt  pclp.sublime-project
PcLp/src/: flow.cc  flow.h  link.cc  link.h  lp_solver.cc  lp_solver.h  main.cc  path.cc  path.h  path_file_parser.cc  path_file_parser.h  xml_handler.cc  xml_handler.h
Scripts/: generateFlowsets.sh  generatePaths.sh  generatePaths_multipleKValues.sh  runPcLpSolutions.sh  runPcLpSolutions_multipleKValues_CA.sh  runPcLpSolutions_multipleKValues_NCA.sh  runPcLpSolutions_multipleKValues_RED_NCA.sh  runUnboundSolutions.sh  setupMoeaSimulations.sh  setupPendingSimulations.sh
SimulationSetup/: .editorconfig  SimulationSetup.pyproj  base_geant.lgf  generate_random_flow_set.py  setup_obj_test.py
SimulationSetup/modules/: job_script.py
lp-solver/: Makefile  graph-manager.h  xml-utilities.h
lp-solver.xcodeproj/: project.pbxproj
lp-solver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: flow-manager.h  graph-manager.cc  graph-manager.h  lp-solver.cc
(+242 files in other folders)
